fix overflow bug

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
   font-weight: 300;
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   color: rgb(154, 154, 154);
   max-width: 100vw;
   display: -webkit-box;
@@ -214,9 +214,6 @@ h1 {
   align-self: center;
 }
 
-.ufo-body {
-}
-
 .shooting {
   position: fixed;
   top: 50px;
@@ -270,6 +267,7 @@ h1 {
 
 .rocks {
   width: 100%;
+  bottom: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -317,6 +315,7 @@ h1 {
   opacity: 0.5;
   position: absolute;
 }
+
 
 .clouds img:nth-child(1) {
   animation: cloud 35s linear infinite;
@@ -838,25 +837,6 @@ article {
 
   100% {
     left: calc(100% + 100px);
-  }
-}
-
-@keyframes cloud1 {
-  0% {
-    left: 300px;
-  }
-
-  25% {
-    left: calc(100% + 100px);
-  }
-
-  50% {
-    opacity: 0;
-    left: 300px;
-  }
-
-  100% {
-    left: 300px;
   }
 }
 
